Ajustes para paginar servicios de inventario, productos, ClienteNovedad, ventas, y cuentas, se crea servicio para traer los FiltrosParametros de un reporte